infrastructure/kubernetes/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: debug
      port: 5005
      targetPort: 5005
      nodePort: 30505
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30022
---
apiVersion: v1
kind: Service
metadata:
  name: weapons-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: weapons-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      nodePort: 30081
    - name: debug
      port: 5005
      targetPort: 5005
      nodePort: 30506
---
apiVersion: v1
kind: Service
metadata:
  name: crew-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: crew-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      nodePort: 30082
    - name: debug
      port: 5678
      targetPort: 5678
      nodePort: 30678
---
apiVersion: v1
kind: Service
metadata:
  name: comms-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: comms-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      nodePort: 30083
    - name: debug
      port: 9229
      targetPort: 9229
      nodePort: 30929
---
apiVersion: v1
kind: Service
metadata:
  name: life-support-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: life-support-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
      nodePort: 30084
    - name: debug
      port: 5005
      targetPort: 5005
      nodePort: 30507
---
apiVersion: v1
kind: Service
metadata:
  name: supply-chain-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: supply-chain-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
      nodePort: 30085
    - name: debug
      port: 5005
      targetPort: 5005
      nodePort: 30508
---
apiVersion: v1
kind: Service
metadata:
  name: docking-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: docking-service
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      nodePort: 30086
    - name: debug
      port: 5678
      targetPort: 5678
      nodePort: 30679
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: targeting-service
  ports:
    - name: http
      port: 8087
      targetPort: 8087
      nodePort: 30087
    - name: debug
      port: 5678
      targetPort: 5678
      nodePort: 30680
---
apiVersion: v1
kind: Service
metadata:
  name: security-core-service
  namespace: death-star
spec:
  type: NodePort
  selector:
    app: security-core-service
  ports:
    - name: http
      port: 8088
      targetPort: 8088
      nodePort: 30088
    - name: debug
      port: 5005
      targetPort: 5005
      nodePort: 30509
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30023
